web: show when the specifications were last updated

--- a/gladweb/static/glad.css
+++ b/gladweb/static/glad.css
@@ -37,3 +37,14 @@ section {
     margin-top: 1rem;
     text-align: right;
 }
+
+#submit {
+    text-align: right;
+}
+
+footer {
+    border-top: 1px solid grey;
+    text-align: right;
+    font-size: 80%;
+    text-transform: uppercase;
+}
