web: show glad version in footer

--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -135,7 +135,7 @@
             </main>
 
             <footer>
-                Specifications last updated: {{ created|pretty_date }}
+                <span class="u-pull-right">Specifications last updated: {{ created|pretty_date }}</span>Glad-Version: {{ get_glad_version() }}
             </footer>
         </div>
     </body>
