web: get_glad_version() -> glad_version

--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -135,7 +135,7 @@
             </main>
 
             <footer>
-                <span class="u-pull-right">Specifications last updated: {{ created|pretty_date }}</span>Glad-Version: {{ get_glad_version() }}
+                <span class="u-pull-right">Specifications last updated: {{ created|pretty_date }}</span>Glad-Version: {{ glad_version }}
             </footer>
         </div>
     </body>
