html: Make glad in generated page a link back.

--- a/gladweb/static/glad.css
+++ b/gladweb/static/glad.css
@@ -13,6 +13,10 @@
     margin-bottom: 5rem;
 }
 
+.header a {
+    text-decoration: none;
+}
+
 section h6 {
     font-size: 1.5rem;
     font-weight: 600;
