web: Implement some kind of permalinks to the configuration.

--- a/gladweb/templates/autoindex.html
+++ b/gladweb/templates/autoindex.html
@@ -43,5 +43,9 @@
 
 
 {% block footer %}
+    <div class="row">
+        <label>Permalink:</label>
+        <input class="u-full-width" type="text" value="{{ url_for('index.landing', _external=True) }}#{{ g.serialized }}" disabled>
+    </div>
     </div>
 {% endblock %}
