--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -43,7 +43,7 @@
                 </section>
                 {% endif %}
 
-                <form action="generate" method="POST">
+                <form action="generate" method="POST" id="main-form">
                     <section id="language-specification">
                         <div class="row">
                             <div class="six columns" id="language">
