--- a/gladweb/static/glad.css
+++ b/gladweb/static/glad.css
@@ -54,6 +54,31 @@ footer {
     text-transform: uppercase;
 }
 
+/* Modal */
+.modal-dialog {
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-dialog > div {
+    margin-top: 100px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+#addListModal textarea {
+    width: 100%;
+    min-height: 230px;
+}
+
 /* Auto Index */
 
 .aidx a:link, .aidx a:visited {
@@ -74,7 +99,7 @@ footer {
 }
 
 .breadcrumb img {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 .breadcrumb .sep {
