--- a/gladweb/templates/autoindex.html
+++ b/gladweb/templates/autoindex.html
@@ -47,7 +47,7 @@
 {% block footer %}
     <div class="row">
         <label>Permalink:</label>
-        <input class="u-full-width" type="text" value="{{ url_for('index.landing', _external=True) }}#{{ g.serialized }}" disabled>
+        <input class="u-full-width" type="text" value="{{ url_for('index.landing', _external=True) }}#{{ g.serialized }}" readonly>
     </div>
     </div>
 {% endblock %}
