html: Include webglstats JS.

--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -157,5 +157,7 @@
                 <span class="u-pull-right">Specifications last updated: {{ created|pretty_date }}</span>Glad-Version: {{ glad_version }}
             </footer>
         </div>
+
+        <script src="//cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
     </body>
 </html>
