glad-web: added "Omit KHR" option

--- a/gladweb/templates/index.html
+++ b/gladweb/templates/index.html
@@ -123,8 +123,14 @@
                         <div class="row">
                             <label for="profile-input">Options</label>
                             <div class="six columns">
-                                <input type="checkbox" name="loader" id="loader-input" checked>
-                                <span class="&nbsp;label-body">Generate a loader</span>
+                                <div class="row">
+                                    <input type="checkbox" name="loader" id="loader-input" checked>
+                                    <span class="&nbsp;label-body">Generate a loader</span>
+                                </div>
+                                <div class="row">
+                                    <input type="checkbox" name="omitkhr" id="omit-khr">
+                                    <span class="&nbsp;label-body">Omit KHR</span>
+                                </div>
                             </div>
                         </div>
                     </section>
